[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/gui.gd" type="Script" id=1]
[ext_resource path="res://textures/multi_logo.tex" type="Texture" id=2]
[ext_resource path="res://fonts/font01-100.fnt" type="BitmapFont" id=3]
[ext_resource path="res://images/MissionComplete.png" type="Texture" id=4]
[ext_resource path="res://sounds/complete.wav" type="Sample" id=5]
[ext_resource path="res://sounds/in_scene.wav" type="Sample" id=6]

[sub_resource type="SampleLibrary" id=1]

samples/complete = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/in_scene = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[node name="gui" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="debug" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0

[node name="player_collision_state" type="Label" parent="debug"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1024.0
margin/top = 600.0
margin/right = 887.0
margin/bottom = 586.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "player_collision_state"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ui" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="Multilogo" type="TextureFrame" parent="ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 104.0
margin/bottom = 104.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Score" type="Label" parent="ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 40.0
margin/right = 188.0
margin/bottom = 94.0
custom_fonts/font = ExtResource( 3 )
text = "x 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EndGame" type="TextureFrame" parent="ui"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -6.0
margin/bottom = 0.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="Button" type="Button" parent="ui/EndGame"]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 125.0
margin/top = 90.0
margin/right = -153.0
margin/bottom = 30.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "GO TO MENU"
flat = false

[node name="sfx" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="ui/EndGame/Button" to="." method="_on_Button_pressed"]


